# sucky_ws

./: .gitignore  Improvements.md  Instructions.md  README.md
ESP32/: relay_esp32.ino
doc-real/: realrobot_instructions.md
doc-real/mapping/: rtabmap.pgm  rtabmap.yaml  rtabmap_140.pgm  rtabmap_140.yaml  rtabmap_140_cleaned.pgm
install/: local_setup.sh  setup.sh
log/: latest_build
src/laser_filters/: CMakeLists.txt  LICENSE
src/planner/: package.xml  setup.py
src/ros2_mpu9250_driver/: CMakeLists.txt  README.md
src/ros2_mpu9250_driver/src/: mpu9250driver_node.py
src/rtabmap/: CMakeLists.txt  package.xml
src/sucky_bringup/: CMakeLists.txt  package.xml
src/sucky_bringup/config/: sim_controllers.yaml  sim_controllers_sweepy.yaml
src/sucky_bringup/launch/: sim_bringup.launch.py  sim_bt_fcpp_bringup.launch.py  sim_fcpp_bringup.launch.py  sim_localization_bringup.launch.py  sim_navigation_bringup.launch.py  sim_opennav_bringup.launch.py  sim_rviz_bringup.launch.py
src/sucky_bringup/meshes/: Big_Wheel.stl  Small_Wheel.dae  Small_Wheel.stl  sucky_reduced_4mb.stl
src/sucky_bringup/models/T-shape-obstacle/: model.config
src/sucky_bringup/models/apartment/: model.config  model.sdf
src/sucky_bringup/models/cylinder_obstacle/: model.config  model.sdf
src/sucky_bringup/models/zone-A/: model.config  model.sdf
src/sucky_bringup/rviz/: camera.rviz  rsp.rviz
src/sucky_bringup/urdf/: gazebo_control.xacro  gazebo_robot.urdf.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_sucky.xacro  ros2_control.xacro  sensor_d455.gazebo.xacro  sensor_d455.urdf.xacro  sensor_d455_usb_plug.urdf.xacro  sensor_imu.xacro  sensor_sick.xacro  sensor_sick_sucky.xacro
src/sucky_bringup/worlds/: T_shape_obstacles.world  apartment.world  workshop_1_obstacle.world  workshop_5_obstacles.world  zone-A.world
src/sucky_hardware_drivers/: CMakeLists.txt  README.md  package.xml
src/sucky_hardware_drivers/launch/: joystick_launch.py  relay_controller_launch.py
src/sucky_hardware_drivers/scripts/: mpu9250_no_mag_pub.py  mpu9250_pub.py  relay_controller_node.py  yaw_drift_pub_mpu9250.py  yaw_mag_pub_mpu9250.py
src/sucky_nav/: CMakeLists.txt  package.xml
src/sucky_nav/behavior_trees/: spiral.xml  spiral_with_recovery.xml  spiral_with_recovery_v2.xml
src/sucky_nav/config/: ekf_params.yaml  nav2_params.yaml  sim_nav2_fcpp.yaml  sim_nav2_fcpp_no_oa.yaml  sim_nav2_opennav_coverage.yaml  sim_nav2_params.yaml
src/sucky_nav/launch/: amcl_launch.py  navigation_launch.py  sim_amcl.launch.py  sim_bt_fcpp.launch.py  sim_coverage_server.launch.py  sim_fcpp.launch.py  sim_fcpp_visualizers.launch.py  sim_mapping.launch.py  sim_navigation.launch.py  sim_opennav_coverage.launch.py
src/sucky_nav/maps/: 1_obstacle.pgm  1_obstacle.yaml  5_obstacle.yaml  hanging_obstacle_118cm-cleaned.pgm  hanging_obstacle_118cm-cleaned.yaml  hanging_obstacle_118cm.pgm  hanging_obstacle_118cm.yaml  hanging_obstacle_138cm.pgm  hanging_obstacle_138cm.yaml  hanging_obstacle_200cm.pgm  hanging_obstacle_200cm.yaml  quad-shop-140cm-cleaned.pgm  quad-shop-140cm-cleaned.yaml  quad-shop-140cm.pgm  quad-shop-140cm.yaml  quad-shop-walkie-talkie-cleaned.pgm  quad-shop-walkie-talkie-cleaned.yaml  quad-shop-walkie-talkie.pgm  quad-shop-walkie-talkie.yaml  quad_shop_rtabmap_z_0.pgm  quad_shop_rtabmap_z_0.yaml  quad_shop_rtabmap_z_2p0.pgm  quad_shop_rtabmap_z_2p0.yaml  quad_shop_z_2.pgm  quad_shop_z_2.yaml  quad_shop_z_2_NomalK_30.pgm  quad_shop_z_2_NomalK_30.yaml  small_map_3_obstacles.pgm  small_map_3_obstacles.yaml  zone-A-123cm.pgm  zone-A-123cm.yaml  zone-A-130-rotated-cleaned.pgm  zone-A-130-rotated-cleaned.yaml  zone-A-130-rotated.pgm  zone-A-130-rotated.yaml  zone-A-130cm.pgm  zone-A-130cm.yaml  zone-A-140cm.pgm  zone-A-140cm.yaml  zone-A-145cm.pgm  (+35 more)
src/sucky_nav/rviz/: fcpp.rviz  fcpp_cleaning_progress.rviz  localization.rviz  mapping.rviz  navigation.rviz  opennav_coverage.rviz  path_coverage.rviz
src/sucky_nav/scripts/: cleaning_visualizer.py  demo_coverage_optimized.py  path_visualizer.py  waypoint_info.py
src/sucky_perception/: CMakeLists.txt  package.xml
src/sucky_rtabmap/: CMakeLists.txt  package.xml
src/sweepy_bringup/: CMakeLists.txt  package.xml
src/sweepy_hardware_drivers/: CMakeLists.txt  package.xml
src/sweepy_nav/: CMakeLists.txt
(+201 files in other folders)
