cmake_minimum_required(VERSION 3.8)
project(sucky_nav)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)


# Install directories
install(
  DIRECTORY launch config maps rviz behavior_trees
  DESTINATION share/${PROJECT_NAME}
)

# Install Python scripts (e.g. initial_pose_publisher.py)
install(
  PROGRAMS
    scripts/initial_pose_publisher.py
    scripts/cleaning_visualizer.py 
    scripts/demo_coverage.py 
    scripts/path_visualizer.py 
    scripts/spiral_path_loader.py 
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
